# HandTracker

./: CMakeLists.txt  HandTracker.sln  README.md  conanfile.txt  tracker.py
.github/workflows/: cccp.yml
HandTracker/: HandTracker.vcxproj  HandTracker.vcxproj.filters  Mesh.h  Shader.h  glad.c  main.cpp
data/shader/: standart_frag.glsl  standart_vert.glsl
includes/glad/: glad.h
lib/: glfw3.lib
src/: Mesh.cpp  Mesh.h  PythonLauncher.cpp  PythonLauncher.h  Shader.h  main.cpp
